verify iso size < 700 MB, do partitioning, change dep to sfdisk

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,5 +3,5 @@ optimize = 1
 
 [bdist_rpm]
 group = Hardware/Other
-requires = pygtk2, pygtk2-libglade, dosfstools, parted
+requires = pygtk2, pygtk2-libglade, dosfstools, util-linux
 doc_files = README COPYING TODO
