Change USB drive for portable drive everywhere and handle the lack of dosfstools
Correct dosfstools detection

--- a/portablelinux.desktop
+++ b/portablelinux.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 Name=Portable Linux
-Comment=Install a bootable live Linux on your USB drive
+Comment=Install a bootable live Linux on your portable drive
 Exec=portablelinux
 Icon=portablelinux
 Terminal=false
